test/src/e2e_vm_tests/test_programs/should_pass/test_abis/balance_test_abi/src/main.sw
library;

abi BalanceTest {
    fn get_42() -> u64;
}
