test/src/e2e_vm_tests/test_programs/should_fail/recover_problem_in_different_file/src/bar.sw
library;

fn typing_problem_recovery_witness() -> bool {
    ()
}
